tests/types_first_function_statics2/types_first_function_statics2.exp
Error --------------------------------------------------------------------------------------------------------- b.js:5:2

Cannot cast `a.g` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   b.js:5:2
   5| (a.g: number);
       ^^^

References:
   a.js:3:7
   3| f.g = "a";
            ^^^ [1]
   b.js:5:7
   5| (a.g: number);
            ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:6:4

Cannot get `a.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:6:4
   6| (a.other: string);
         ^^^^^

References:
   a.js:1:11
   1| const f = () => {};
                ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:13:2

Cannot cast `poly_a.g` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   b.js:13:2
   13| (poly_a.g: number);
        ^^^^^^^^

References:
   poly_a.js:3:7
    3| f.g = "a";
             ^^^ [1]
   b.js:13:12
   13| (poly_a.g: number);
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:14:9

Cannot get `poly_a.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:14:9
   14| (poly_a.other: string);
               ^^^^^

References:
   poly_a.js:1:11
    1| const f = <T>() => {};
                 ^^^^^^^^^^^ [1]



Found 4 errors
